[project]
name = "workout-api"
version = "0.1.0"
description = ""
authors = [
    {name = "IgorSantos-CD",email = "igor.5antos@outlook.com"}
]
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "sqlalchemy (==2.0.19)",
    "alembic (==1.11.1)",
    "asyncpg (==0.28.0)",
    "uvicorn (==0.23.1)",
    "fastapi (==0.100.1)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[tool.poetry]

[tool.poetry.dependencies]
pydantic-settings = {allow-prereleases = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
